Fix strange break on navigation menu

--- a/source/assets/stylesheets/_global.scss
+++ b/source/assets/stylesheets/_global.scss
@@ -1,5 +1,5 @@
 #main-content {
-  @include media ($medium-screen) {
+  @include media($large-screen) {
     margin-top: $navigation-height;
   }
 }
